--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,13 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.jboss.eap</groupId>
+			<artifactId>wildfly-weld</artifactId>
+			<version>7.2.0.GA-redhat-00005</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
 			<scope>provided</scope>
@@ -121,13 +128,6 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-jpamodelgen</artifactId>
-			<scope>provided</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>1.7.26</version>
 			<scope>provided</scope>
 		</dependency>
 
